Prevent search form from wrapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 
  .select-form,
  .headers {
-   width: 438px;
+   width: 460px;
  }
 
  .booking-btn,
